// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-angler-ai destination: saveEvent action - all fields 1`] = `
Object {
  "data": Array [
    Object {
      "custom_event_name": "3mG!HxRA*^ARn)qHBi",
      "event_id": "3mG!HxRA*^ARn)qHBi",
      "event_name": "3mG!HxRA*^ARn)qHBi",
      "ip": "3mG!HxRA*^ARn)qHBi",
      "products": Array [
        Object {
          "price": 56515583855820.8,
          "productId": "3mG!HxRA*^ARn)qHBi",
          "quantity": 5651558385582080,
          "revenue": 56515583855820.8,
          "revenueType": "3mG!HxRA*^ARn)qHBi",
        },
      ],
      "referrer": "3mG!HxRA*^ARn)qHBi",
      "userAgent": "3mG!HxRA*^ARn)qHBi",
      "utm_properties": Object {
        "utm_campaign": "3mG!HxRA*^ARn)qHBi",
        "utm_content": "3mG!HxRA*^ARn)qHBi",
        "utm_medium": "3mG!HxRA*^ARn)qHBi",
        "utm_source": "3mG!HxRA*^ARn)qHBi",
        "utm_term": "3mG!HxRA*^ARn)qHBi",
      },
    },
  ],
  "src": "SEGMENT",
}
`;

exports[`Testing snapshot for actions-angler-ai destination: saveEvent action - required fields 1`] = `
Object {
  "data": Array [
    Object {
      "custom_event_name": "3mG!HxRA*^ARn)qHBi",
      "event_id": "3mG!HxRA*^ARn)qHBi",
      "event_name": "3mG!HxRA*^ARn)qHBi",
    },
  ],
  "src": "SEGMENT",
}
`;

exports[`Testing snapshot for actions-angler-ai destination: saveOrder action - all fields 1`] = `
Object {
  "data": Array [
    Object {},
  ],
  "src": "SEGMENT",
}
`;

exports[`Testing snapshot for actions-angler-ai destination: saveOrder action - required fields 1`] = `
Object {
  "data": Array [
    Object {},
  ],
  "src": "SEGMENT",
}
`;

exports[`Testing snapshot for actions-angler-ai destination: saveUser action - all fields 1`] = `
Object {
  "data": Array [
    Object {
      "accepts_marketing": false,
      "accepts_marketing_updated_at": "g[^FhJnb(lsNz",
      "additional_fields": Array [
        Object {
          "name": "g[^FhJnb(lsNz",
          "value": "g[^FhJnb(lsNz",
        },
      ],
      "addresses": Array [
        Object {
          "address1": "g[^FhJnb(lsNz",
          "address2": "g[^FhJnb(lsNz",
          "city": "g[^FhJnb(lsNz",
          "company": "g[^FhJnb(lsNz",
          "country": "g[^FhJnb(lsNz",
          "country_code": "g[^FhJnb(lsNz",
          "country_name": "g[^FhJnb(lsNz",
          "customer_id": "g[^FhJnb(lsNz",
          "default": false,
          "first_name": "g[^FhJnb(lsNz",
          "hashed_address1": "g[^FhJnb(lsNz",
          "hashed_address2": "g[^FhJnb(lsNz",
          "hashed_city": "g[^FhJnb(lsNz",
          "hashed_country_code": "g[^FhJnb(lsNz",
          "hashed_first_name": "g[^FhJnb(lsNz",
          "hashed_last_name": "g[^FhJnb(lsNz",
          "hashed_phone": "g[^FhJnb(lsNz",
          "hashed_zip": "g[^FhJnb(lsNz",
          "id": "g[^FhJnb(lsNz",
          "last_name": "g[^FhJnb(lsNz",
          "name": "g[^FhJnb(lsNz",
          "phone": "g[^FhJnb(lsNz",
          "province": "g[^FhJnb(lsNz",
          "province_code": "g[^FhJnb(lsNz",
          "zip": "g[^FhJnb(lsNz",
        },
      ],
      "created_at": "g[^FhJnb(lsNz",
      "currency": "DZD",
      "default_address": Object {
        "address1": "g[^FhJnb(lsNz",
        "address2": "g[^FhJnb(lsNz",
        "city": "g[^FhJnb(lsNz",
        "company": "g[^FhJnb(lsNz",
        "country": "g[^FhJnb(lsNz",
        "country_code": "g[^FhJnb(lsNz",
        "country_name": "g[^FhJnb(lsNz",
        "customer_id": "g[^FhJnb(lsNz",
        "default": false,
        "first_name": "g[^FhJnb(lsNz",
        "hashed_address1": "g[^FhJnb(lsNz",
        "hashed_address2": "g[^FhJnb(lsNz",
        "hashed_city": "g[^FhJnb(lsNz",
        "hashed_country_code": "g[^FhJnb(lsNz",
        "hashed_first_name": "g[^FhJnb(lsNz",
        "hashed_last_name": "g[^FhJnb(lsNz",
        "hashed_phone": "g[^FhJnb(lsNz",
        "hashed_zip": "g[^FhJnb(lsNz",
        "id": "g[^FhJnb(lsNz",
        "last_name": "g[^FhJnb(lsNz",
        "name": "g[^FhJnb(lsNz",
        "phone": "g[^FhJnb(lsNz",
        "province": "g[^FhJnb(lsNz",
        "province_code": "g[^FhJnb(lsNz",
        "zip": "g[^FhJnb(lsNz",
      },
      "email": "zav@eja.hm",
      "email_marketing_consent": Object {
        "consent_updated_at": "g[^FhJnb(lsNz",
        "opt_in_level": "g[^FhJnb(lsNz",
        "state": "g[^FhJnb(lsNz",
      },
      "first_name": "g[^FhJnb(lsNz",
      "hashed_email": "g[^FhJnb(lsNz",
      "hashed_first_name": "g[^FhJnb(lsNz",
      "hashed_last_name": "g[^FhJnb(lsNz",
      "hashed_phone": "g[^FhJnb(lsNz",
      "id": "g[^FhJnb(lsNz",
      "last_name": "g[^FhJnb(lsNz",
      "last_order_id": "g[^FhJnb(lsNz",
      "last_order_name": "g[^FhJnb(lsNz",
      "marketing_opt_in_level": "g[^FhJnb(lsNz",
      "metafield": Object {
        "key": "g[^FhJnb(lsNz",
        "namespace": "g[^FhJnb(lsNz",
        "type": "g[^FhJnb(lsNz",
        "value": "g[^FhJnb(lsNz",
      },
      "note": "g[^FhJnb(lsNz",
      "orders_count": 9227457181777.92,
      "phone": "g[^FhJnb(lsNz",
      "sms_marketing_consent": Object {
        "consent_collected_from": "g[^FhJnb(lsNz",
        "consent_updated_at": "g[^FhJnb(lsNz",
        "opt_in_level": "g[^FhJnb(lsNz",
        "state": "g[^FhJnb(lsNz",
      },
      "state": "INVITED",
      "tags": "g[^FhJnb(lsNz",
      "tax_exempt": false,
      "total_spent": "g[^FhJnb(lsNz",
      "updated_at": "g[^FhJnb(lsNz",
      "verified_email": false,
    },
  ],
  "src": "SEGMENT",
}
`;

exports[`Testing snapshot for actions-angler-ai destination: saveUser action - required fields 1`] = `
Object {
  "data": Array [
    Object {
      "id": "g[^FhJnb(lsNz",
      "last_order_id": "g[^FhJnb(lsNz",
    },
  ],
  "src": "SEGMENT",
}
`;
